apply some suggestions from ide