@@ -2,14 +2,13 @@ package io.jbock.simple.processor.binding;
 
 import com.palantir.javapoet.ClassName;
 import io.jbock.simple.processor.util.ValidationFailure;
-
+import java.util.List;
+import java.util.function.Supplier;
+import java.util.stream.Collectors;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.type.TypeKind;
 import javax.lang.model.util.ElementFilter;
-import java.util.List;
-import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import static io.jbock.simple.processor.util.Suppliers.memoize;
 import static javax.lang.model.element.Modifier.STATIC;
@@ -23,7 +22,7 @@ public class FactoryElement {
     private final Supplier<ExecutableElement> singleAbstractMethod = memoize(() -> {
         List<ExecutableElement> methods = ElementFilter.methodsIn(element().getEnclosedElements())
                 .stream().filter(m -> !m.getModifiers().contains(STATIC))
-                .collect(Collectors.toList());
+                .toList();
         if (methods.isEmpty()) {
             throw new ValidationFailure("Factory method not found", element());
         }
